JSW Devsb/src/objects/Gift_Stock__c.object
<CustomObject>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Gifts Stock</relationshipLabel>
        <relationshipName>Gifts_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Gifts Stock</relationshipLabel>
        <relationshipName>Gifts_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gifts_Available__c</fullName>
        <formula>Gifts_in_Stock__c  -  Gifts_Dispatched__c +  Vendors_Gifts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gifts_Dispatched__c</fullName>
        <label>Gifts Dispatched</label>
        <summarizedField>Gifts_Dispatch__c.Quantity__c</summarizedField>
        <summaryForeignKey>Gifts_Dispatch__c.Gift_Stock__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gifts_in_Stock__c</fullName>
        <label>Gifts in Stock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Gifts Stock</relationshipLabel>
        <relationshipName>Gifts_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendors_Gifts__c</fullName>
        <label>Vendors Gifts</label>
        <summarizedField>Vendor_Gift_Management__c.Quantity_Delivered_by_Vendor__c</summarizedField>
        <summaryForeignKey>Vendor_Gift_Management__c.Gift_Stock__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Gift Stock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Gift Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>State_District_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( Districts__c != null, State__c != null) , true, false)</errorConditionFormula>
        <errorMessage>Please select either State or District</errorMessage>
    </validationRules>
</CustomObject>